--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "coi-serviceworker": "^0.1.6",
+    "d3": "^7.8.4",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "snarkyjs": "0.*",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
-    "snarkyjs": "0.*"
+    "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.0"
   }
 }
