--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
-  "name": "ui",
+  "name": "my-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "ts-watch": "tsc --noEmit --incremental --watch",
-    "export": "next export",
-    "deploy": "next build && next export && touch out/.nojekyll  && git add -f out && git commit -m \"Deploy gh-pages\" && cd .. && git subtree push --prefix ui/out origin gh-pages"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "coi-serviceworker": "^0.1.6",
+    "autoprefixer": "^10.4.14",
     "d3": "^7.8.4",
+    "d3-geo": "^3.1.0",
+    "d3-geo-projection": "^4.0.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
-    "postcss": "8.4.21",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "snarkyjs": "0.*",
-    "tailwindcss": "3.3.1",
+    "tailwindcss": "^3.3.1",
+    "topojson-client": "^3.1.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/d3": "^7.4.0"
+    "@types/d3": "^7.4.0",
+    "@types/topojson-client": "^3.1.1"
   }
 }
